--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reflexjs": "^2.0.0-rc.0"
+    "reflexjs": "^2.0.0-rc.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
